<resources>
    <string name="app_name">BBVA Ofertas</string>

    <!-- Nombres de los tabs -->

    <string name="tab_text_1">Inicio</string>
    <string name="tab_text_2">Mapa</string>
    <string name="tab_text_3">Extras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="User">Número de Teléfono</string>
    <string name="Password">Contraseña</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Acceder">Acceder sin ser cliente</string>
    <string name="forgetPassword">¿Olvidaste tu contraseña?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_oferta">Detalles de la Oferta</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>
